# handler/listOpening.go
@@ -10,14 +10,14 @@ import (
 // @BasePath /api/v1
 
 // @Summary List openings
-// @Description List all job opening
-// @Tags openings
+// @Description List all job openings
+// @Tags Openings
 // @Accept json
 // @Produce json
 // @Success 200 {object} ListOpeningsResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /openings [get]
-func ListOpeningHandler(ctx *gin.Context) {
+func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
 	if err := db.Find(&openings).Error; err != nil {
